--- a/settings vscode.json
+++ b/settings vscode.json
@@ -1,9 +1,9 @@
 {
   "files.autoSaveDelay": 100,
   "files.autoSave": "afterDelay",
-  "window.zoomLevel": -1.2,
+  "window.zoomLevel": -0.5,
   "editor.fontSize": 14,
-  "editor.fontFamily": "Hack NF,Consolas, 'Courier New',monospace",
+  "editor.fontFamily": "JetBrainsMono NF,Hack NF,Consolas, 'Courier New',monospace",
   "editor.fontLigatures": true,
   "workbench.startupEditor": "none",
   "explorer.confirmDelete": true,
@@ -13,20 +13,33 @@
   "editor.autoIndent": "brackets",
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": "active",
-  "editor.minimap.enabled": false,
   "terminal.integrated.gpuAcceleration": "off",
-  "terminal.integrated.fontSize": 16,
+  "terminal.integrated.fontSize": 13,
+  "terminal.integrated.fontFamily": "Hack NF,Consolas, 'Courier New',monospace",
   "workbench.iconTheme": "material-icon-theme",
   "editor.cursorBlinking": "expand",
   "security.workspace.trust.untrustedFiles": "open",
   "workbench.colorCustomizations": {
-  
     "[One Dark Pro Flat]": {
-      
+      "activityBar.background": "#282c34",
+      "activityBar.foreground": "#c8d6c7",
+      "activityBarBadge.background": "#5b3a7e",
+      "activityBarBadge.foreground": "#f8fafd",
+      "activityBar.activeBorder": "#0000",
+      "statusBar.background": "#5b3a7e",
+      "statusBar.foreground": "#ffffff",
     }
   },
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "workbench.colorTheme": "One Dark Pro Flat"
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "workbench.colorTheme": "One Dark Pro Flat",
+  "git.confirmSync": true,
+  "liveServer.settings.donotVerifyTags": true,
+  "oneDarkPro.vivid": true,
+  "editor.minimap.autohide": true,
+  "editor.minimap.size": "fit",
 }
